--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'com.android.support:support-v13:23.4.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
