--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'com.android.support:support-v13:23.4.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    //GCM 라이브러리
+    compile 'com.google.firebase:firebase-messaging:9.0.0'
+    apply plugin: 'com.google.gms.google-services'
 }
