--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,6 @@
             android:name=".login.LoginActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize|adjustUnspecified|stateAlwaysHidden">
-
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
         </activity>
         <activity android:name=".main.MainActivity" />
         <activity android:name=".splash.SplashActivity">
@@ -37,6 +30,18 @@
             </intent-filter>
         </activity>
         <activity android:name=".help.HelpActivity"></activity>
+        <service
+            android:name=".push.service.MyInstanceIDListenerService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".push.service.MyFcmListenerService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
