--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.thatzit.kjw.stamptour_kyj_client"
-        minSdkVersion 19
+        minSdkVersion 20
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -22,10 +22,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:percent:23.2.1'
     compile 'com.roughike:bottom-bar:2.0.2'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
@@ -35,11 +33,13 @@ dependencies {
     //indicator
     compile project(':ViewPagerIndicator')
     //Butterknife
-    compile 'com.jakewharton:butterknife:7.0.1'
+
     //GCM 라이브러리
     compile 'com.google.firebase:firebase-messaging:9.0.0'
     //google map 라이브러리
-    compile 'com.google.android.gms:play-services:9.0.0'
+    compile 'com.google.android.gms:play-services-location:9.0.0'
+    compile 'com.google.android.gms:play-services-maps:9.0.0'
+    compile 'com.google.android.gms:play-services-ads:9.0.0'
     //flexible space with image list library(ObservableScrollView)
     compile 'com.github.ksoichiro:android-observablescrollview:1.5.0'
     compile 'com.nineoldandroids:library:2.4.0'
