jellanbin 선물하기 화면작업까지

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,8 @@
             android:windowSoftInputMode="adjustResize|adjustUnspecified|stateAlwaysHidden" />
         <activity android:name=".login.FindIdActivity" />
         <activity android:name=".login.FindPassActivity" />
-        <activity android:name=".more.GiftManageActivity"></activity>
+        <activity android:name=".more.GiftManageActivity" />
+        <activity android:name=".more.GiftActivity"></activity>
     </application>
 
 </manifest>
