--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,7 @@
         <activity android:name=".more.GiftActivity"></activity>
 
         <activity android:name=".login.SocialJoinActivity"/>
+        <activity android:name=".main.TermsActivity"/>
 
         <activity
             tools:replace="android:theme"
