--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,10 @@ dependencies {
     //페이스북 sdk
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 
+
     // 카카오톡 sdk를 사용하기 위해 필요.
+    compile group: 'com.kakao.sdk', name: 'kakaolink', version: project.KAKAO_SDK_VERSION
     compile group: 'com.kakao.sdk', name: 'kakaotalk', version: project.KAKAO_SDK_VERSION
+
 }
 apply plugin: 'com.google.gms.google-services'
